# net-hippie

./: .gitignore  .gitlab-ci.yml  .rubocop.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  RUST_BACKEND.md  Rakefile  extconf.rb  net-hippie.gemspec
.github/workflows/: ci.yml  gempush.yml  test.yml
exe/: net-hippie
lib/net/: hippie.rb
lib/net/hippie/: api.rb  client.rb  connection.rb  content_type_mapper.rb  json_mapper.rb  rust_backend.rb  rust_connection.rb  version.rb
src/: lib.rs
test/: test_helper.rb
test/fixtures/: delete_breaches.yml  does_follow_redirects.yml  does_not_follow_redirect.yml  follow_redirects_with_relative_paths.yml  get_bearer_auth.yml  get_breaches.yml  get_root.yml  multiple-gets-to-pypi.yml  post_basic_auth.yml  post_breaches.yml  put_breaches.yml
test/net/: api_test.rb  client_test.rb  connection_test.rb  content_type_mapper_test.rb  error_handling_test.rb  hippie_test.rb  timeout_test.rb
