[package]
name = "net-hippie"
version = "0.1.0"
edition = "2021"

[lib]
name = "net_hippie_ext"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[features]
default = []